--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   </head>
   <body onload="cargarText()">
     <p id="excusa">
-      OMG!!! Realmente no me va a poder creer, lo que paso con mi tareea...
+      OMG!!! Realmente no me va a poder creer, lo que paso con mi tarea...
     </p>
-    <script src="excuse.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
